# doc-to-pdf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/add-doc/: SKILL.md
.github/workflows/: lint.yml  release.yml
products/linear/: __main__.py  config.py  toc.py
products/obsidian/: __main__.py  config.py  toc.py
products/zed/: __main__.py  config.py  toc.py
shared/: __init__.py  browser.py  config.py  pdf_merge.py  pdf_page.py  pdf_utils.py  pipeline.py  product_main.py  section_page.py  types.py
